[gd_scene load_steps=10 format=3 uid="uid://ccj4nvwbyaiyn"]

[ext_resource type="Script" path="res://Scenes/Entities/entity.gd" id="1_8a7uk"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/arrow.png" id="2_6l1np"]
[ext_resource type="Texture2D" uid="uid://bj3im6egs4wxx" path="res://art/tile_0086.png" id="2_b27vp"]
[ext_resource type="PackedScene" uid="uid://ndvcod1dpp6o" path="res://Scenes/UI/stats_ui.tscn" id="3_8imyn"]
[ext_resource type="PackedScene" uid="uid://cl7r85nikfk5j" path="res://Scenes/StatusHandler/status_handler.tscn" id="5_ahq5m"]
[ext_resource type="PackedScene" uid="uid://c10m27yb8itjp" path="res://Scenes/ModifierHandler/modifier_handler.tscn" id="6_hv706"]
[ext_resource type="PackedScene" uid="uid://dnqccd37xu16v" path="res://Scenes/ModifierHandler/modifier.tscn" id="7_orqs5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tnagf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b27vp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo1ux"]

[node name="Entity" type="Area2D"]
collision_layer = 4
script = ExtResource("1_8a7uk")

[node name="EntityAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tnagf")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(29, -30)
rotation = -2.33351
texture = ExtResource("2_6l1np")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_wo1ux")

[node name="StatsUI" parent="." instance=ExtResource("3_8imyn")]
offset_top = 21.0
offset_bottom = 53.0

[node name="StatusHandler" parent="." node_paths=PackedStringArray("statusOwner") instance=ExtResource("5_ahq5m")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = 54.0
offset_right = 41.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
columns = 3
statusOwner = NodePath("..")

[node name="ModifierHandler" parent="." instance=ExtResource("6_hv706")]

[node name="DamageDealtModifier" parent="ModifierHandler" instance=ExtResource("7_orqs5")]

[node name="DamageTakenModifier" parent="ModifierHandler" instance=ExtResource("7_orqs5")]
type = 1

[node name="RedirectionModifier" parent="ModifierHandler" instance=ExtResource("7_orqs5")]
type = 5

[node name="SpeedModifier" parent="ModifierHandler" instance=ExtResource("7_orqs5")]
type = 6

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
